<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/changeTextColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_text_color" />

            <Button
                android:id="@+id/changeBgColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change_background_color" />

        </LinearLayout>

        <TextView
            android:id="@+id/askText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ask" />

        <ToggleButton
            android:id="@+id/ask"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/langPicker"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lang" />

        <Button
            android:id="@+id/keyPicker"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/select_key" />

        <TextView
            android:id="@+id/passSaveSwitchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/save_pass" />

        <ToggleButton
            android:id="@+id/passSaveSwitch"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/v1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/v1" />

        <ToggleButton
            android:id="@+id/v1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/v2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/v2" />

        <ToggleButton
            android:id="@+id/v2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/v3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/v3" />

        <ToggleButton
            android:id="@+id/v3"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/v4Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/v4" />

        <ToggleButton
            android:id="@+id/v4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>
</ScrollView>